Fixed navigation on mobile devices. Added OS files to gitignore

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1252,27 +1252,28 @@ body {
 
 .navigation__button {
   background-color: #fff;
-  width: 7rem;
   height: 7rem;
+  width: 7rem;
   position: fixed;
   top: 6rem;
   right: 6rem;
   border-radius: 50%;
   z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
   @media only screen and (max-width: 56.25em) {
     .navigation__button {
-      top: 3rem;
-      right: 3rem; } }
+      top: 4rem;
+      right: 4rem; } }
   @media only screen and (max-width: 37.5em) {
     .navigation__button {
-      top: 3.5rem;
-      right: 3.5rem; } }
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation__background {
-  width: 6rem;
   height: 6rem;
+  width: 6rem;
   border-radius: 50%;
   position: fixed;
   top: 6.5rem;
@@ -1282,18 +1283,18 @@ body {
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
     .navigation__background {
-      top: 3.5rem;
-      right: 3.5rem; } }
+      top: 4.5rem;
+      right: 4.5rem; } }
   @media only screen and (max-width: 37.5em) {
     .navigation__background {
-      top: 4rem;
-      right: 4rem; } }
+      top: 3.5rem;
+      right: 3.5rem; } }
 
 .navigation__nav {
-  height: 50vw;
+  height: 100vh;
   position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   z-index: 1500;
   opacity: 0;
   width: 0;
@@ -1322,15 +1323,14 @@ body {
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 220%;
   transition: all .4s; }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1.5rem;
+    display: inline-block; }
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
   color: #55c57a;
   transform: translateX(1rem); }
-
-.navigation__link span {
-  margin-right: 1.5rem;
-  display: inline-block; }
 
 .navigation__checkbox:checked ~ .navigation__background {
   transform: scale(80); }
